openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parasol-insurance
  labels:
    app: parasol-insurance
spec:
  selector:
    app: parasol-insurance
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
